fix(core/dropdown): enable overflow

--- a/packages/core/src/components/dropdown/dropdown.scss
+++ b/packages/core/src/components/dropdown/dropdown.scss
@@ -22,6 +22,6 @@
 }
 
 :host(.dropdown-menu) {
-  //overflow: visible !important;
+  overflow: visible !important;
   margin-right: 10px;
 }
